--- a/scss/_patterns_lists.scss
+++ b/scss/_patterns_lists.scss
@@ -189,7 +189,7 @@ $spv-list-item--inner: null;
       }
     }
 
-    .p-stepped-list h#{$i}.p-stepped-list__title + .p-stepped-list__content {
+    h#{$i}.p-stepped-list__title + .p-stepped-list__content {
       @media (max-width: $breakpoint-heading-threshold) {
         margin-left: $bullet-width-mobile + $sph-inner;
       }
@@ -200,14 +200,6 @@ $spv-list-item--inner: null;
     }
 
     .p-stepped-list--detailed h#{$i}.p-stepped-list__title + .p-stepped-list__content {
-      @media (max-width: $breakpoint-heading-threshold) {
-        margin-left: $bullet-width-mobile + $sph-inner;
-      }
-
-      @media (min-width: $breakpoint-heading-threshold) {
-        margin-left: $bullet-width + $sph-inner;
-      }
-
       @media (min-width: $threshold-6-12-col) {
         margin-left: 0;
       }
