fix focus states in nav

--- a/scss/_patterns_navigation.scss
+++ b/scss/_patterns_navigation.scss
@@ -73,6 +73,8 @@ $lightness-threshold: 70;
   }
 
   %navigation-item-in-logo {
+    @include vf-focus;
+
     display: flex;
   }
 
@@ -212,6 +214,8 @@ $lightness-threshold: 70;
 
       &--open,
       &--close {
+        @include vf-focus;
+
         margin: 0 0 auto $sph-inner;
         padding: $spv-inner--medium 0;
 
