remove calc because it is not needed

--- a/scss/_patterns_tabs.scss
+++ b/scss/_patterns_tabs.scss
@@ -33,7 +33,7 @@
 
     &__list {
       display: flex;
-      margin: 0 auto calc($spv-outer--scaleable);
+      margin: 0 auto $spv-outer--scaleable;
       overflow-x: auto;
       padding: 0;
       position: relative;
