fix tab borders order

--- a/scss/_patterns_tabs.scss
+++ b/scss/_patterns_tabs.scss
@@ -32,6 +32,8 @@
     }
 
     &__list {
+      @extend %vf-pseudo-border--bottom;
+
       display: flex;
       margin: 0 auto $spv-outer--scaleable;
       overflow-x: auto;
@@ -71,6 +73,7 @@
         @extend %vf-pseudo-border;
 
         bottom: 0;
+        z-index: 1;
       }
 
       &:hover,
