position icons with vertical align

--- a/templates/docs/examples/templates/external-links.html
+++ b/templates/docs/examples/templates/external-links.html
@@ -2,11 +2,27 @@
 {% block title %}External links{% endblock %}
 
 {% block content %}
+
 <div class="p-strip">
   <div class="row">
+    <h1>
+      <span class="u-visualise-font-metrics"><a href="#" class="p-link--external">SDN NFV World Congress 2017™</a></span>
+    </h1>
+    <h2>
+      <span class="u-visualise-font-metrics"><a href="#" class="p-link--external">SDN NFV World Congress 2017™</a></span>
+    </h2>
+    <h3>
+      <span class="u-visualise-font-metrics"><a href="#" class="p-link--external">SDN NFV World Congress 2017™</a></span>
+    </h3>
+    <h4>
+      <span class="u-visualise-font-metrics"><a href="#" class="p-link--external">SDN NFV World Congress 2017™</a></span>
+    </h4>
+    <p>
+      <span class="u-visualise-font-metrics"><a href="#" class="p-link--external">SDN NFV World Congress 2017™</a></span>
+    </p>
     <div class="col-12">
       <p><a href="#">Link</a></p>
-      <p><a class="p-link--external">External link</a></p>
+      <p><a href="#" class="p-link--external">External link</a></p>
       <a class="p-button"><span class="p-link--external">External button</span></a>
       <a class="p-button--positive"><span class="p-link--external">External positive button</span></a>
       <a class="p-button--negative"><span class="p-link--external">External negative button</span></a>
