remove vertical offsets from divider lines

--- a/scss/_patterns_divider.scss
+++ b/scss/_patterns_divider.scss
@@ -28,11 +28,11 @@
     @media (min-width: $threshold-6-12-col) {
       &:not(:nth-child(1))::before {
         background-color: $color-mid-light;
-        bottom: $sp-unit; // compensate for bottom margin on children
+        bottom: 0;
         content: '';
         left: map-get($grid-gutter-widths, large) * -0.5; // "large" here is not a typo. The grid switches to 12 columns at breakpoint medium. Hence the use of large-screen gutter
         position: absolute;
-        top: $sp-unit;
+        top: 0;
         width: 1px;
       }
     }
