--- a/scss/_patterns_divider.scss
+++ b/scss/_patterns_divider.scss
@@ -26,7 +26,7 @@
     }
 
     @media (min-width: $threshold-6-12-col) {
-      &:not(:nth-child(1))::before {
+      &:not(:first-child)::before {
         background-color: $color-mid-light;
         bottom: 0;
         content: '';
