standardize all dark text to #111

--- a/scss/_base_button.scss
+++ b/scss/_base_button.scss
@@ -78,7 +78,7 @@
 /// override colors as desired
 @mixin vf-button-pattern(
   $button-background-color: $color-x-light,
-  $button-text-color: $color-x-dark,
+  $button-text-color: $color-dark,
   $button-disabled-background-color: $color-transparent,
   $button-disabled-border-color: $colors--light-theme--border-high-contrast,
   $button-border-color: $colors--light-theme--border-high-contrast,
