--- a/scss/_global_functions.scss
+++ b/scss/_global_functions.scss
@@ -32,7 +32,7 @@
 // Test value of bg $color and return light or dark text color accordingly
 @function vf-contrast-text-color($color) {
   @if (lightness($color) > 55) {
-    @return $color-x-dark; // Lighter background, return dark color
+    @return $color-dark; // Lighter background, return dark color
   } @else {
     @return $color-x-light; // Darker background, return light color
   }
