--- a/scss/_patterns_pagination.scss
+++ b/scss/_patterns_pagination.scss
@@ -8,7 +8,7 @@
     border-radius: $border-radius;
     border-style: solid;
     border-width: 1px;
-    color: $color-x-dark;
+    color: $color-dark;
     display: block;
     padding: calc(#{$spv-nudge} - 1px) $sph-inner;
     text-decoration: none;
@@ -27,7 +27,7 @@
     &.is-active {
       background-color: darken($color-x-light, 10%);
       border-color: $color-mid;
-      color: $color-x-dark;
+      color: $color-dark;
       text-decoration: none;
     }
 
