--- a/scss/_patterns_tabs.scss
+++ b/scss/_patterns_tabs.scss
@@ -56,7 +56,7 @@
     &__link {
       @include vf-focus;
 
-      color: $color-x-dark;
+      color: $color-dark;
       display: block;
       line-height: map-get($line-heights, default-text);
       padding: $spv-inner--medium $sph-inner;
@@ -65,7 +65,7 @@
       &:active,
       &:hover,
       &:visited {
-        color: $color-x-dark;
+        color: $color-dark;
         text-decoration: none;
       }
 
