--- a/scss/_patterns_buttons.scss
+++ b/scss/_patterns_buttons.scss
@@ -118,7 +118,7 @@
     @include vf-button-pattern(
       $button-background-color: $color-transparent,
       $button-border-color: $color-transparent,
-      $button-text-color: $color-x-dark,
+      $button-text-color: $color-dark,
       $button-hover-background-color: darken($color-x-light, $hover-background-darken-percentage),
       $button-hover-border-color: $color-transparent,
       $button-active-background-color: darken($color-light, $active-background-darken-percentage),
