Add muted text to component status

--- a/templates/_layouts/docs.html
+++ b/templates/_layouts/docs.html
@@ -51,7 +51,7 @@
               {{ side_nav_item("/docs/base/forms", "Forms") }}
               {{ side_nav_item("/docs/base/reset", "Reset") }}
               {{ side_nav_item("/docs/base/tables", "Tables") }}
-              {{ side_nav_item("/docs/base/typography", "Typography") }}
+              {{ side_nav_item("/docs/base/typography", "Typography", "new") }}
             </ul>
 
             <ul class="p-side-navigation__list">
