--- a/templates/docs/examples/layouts/application.html
+++ b/templates/docs/examples/layouts/application.html
@@ -33,36 +33,39 @@
   </div>
 </div>
 
+
+
+
+
 <style>
   body { margin: 0; }
 
-
+  /* small screen */
+ .l-app {
+   display: grid;
+   grid-template-columns: min-content 1fr;
+   grid-template-rows: min-content 1fr min-content;
+   grid-template-areas:
+    "side top"
+    "side main"
+    "side bottom";
+   height: 100vh;
+   width: 100vw;
+ }
 
   .l-toggle {
     color: #FFF;
     background: #111;
     text-align: right;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-
     padding: 5px;
+
+    grid-area: top;
   }
 
-  .l-sidebar .pin {
-    display: none;
-  }
-
-  @media (min-width: 800px) {
-    .l-sidebar .toggle,
-    .l-toggle {
-      display: none;
-    }
-  }
-
-  .l-app {
-    min-height: 100vh;
+  .l-main {
+    grid-area: main;
+    overflow-y: auto;
+    padding: 10px;
   }
 
   .l-sidebar {
@@ -79,52 +82,60 @@
     padding: 10px;
   }
 
+  .is-hidden {
+    display: none;
+  }
+
+  .l-sidebar .pin {
+    display: none;
+  }
+
   @media (max-width: 300px) {
     .l-sidebar {
       width: 100%;
     }
   }
 
-  .l-main {
-    padding: 10px;
-  }
 
-  @media (min-width: 800px) {
+  @media (min-width: 600px) {
+    .l-sidebar .toggle,
+    .l-toggle {
+      display: none;
+    }
+
+    .l-app {
+      grid-template-columns: 50px 1fr;
+    }
+
     .l-sidebar .pin {
       display: block;
     }
 
-    .l-sidebar {
+    .l-sidebar.is-hidden {
+      display: block;
+    }
 
-          width: 50px;
-          white-space: nowrap;
-          transition: width 100ms;
+    .l-sidebar {
+      width: 50px;
+      white-space: nowrap;
+      transition: width 100ms;
     }
 
     .l-sidebar:hover {
       width: 200px;
     }
 
-    .l-main {
-      margin-left: 50px;
+
+    /* pinned */
+
+    .l-app.is-pinned {
+      grid-template-columns: min-content 1fr;
     }
 
-    .l-sidebar.is-pinned {
+    .l-app.is-pinned .l-sidebar {
       width: 200px;
-    }
-
-    .l-sidebar.is-pinned + .l-main {
-      margin-left: 200px;
-    }
-  }
-
-  .is-hidden {
-    display: none;
-  }
-
-  @media (min-width: 800px) {
-    .is-hidden {
-      display: block;
+      position: static;
+      grid-area: side;
     }
   }
 
@@ -133,12 +144,15 @@
       display: none;
     }
 
-    .l-sidebar {
-      width: 200px;
+    /* same as pinned */
+    .l-app {
+      grid-template-columns: min-content 1fr;
     }
 
-    .l-sidebar + .l-main {
-      margin-left: 200px;
+    .l-sidebar {
+      width: 200px;
+      position: static;
+      grid-area: side;
     }
   }
 </style>
@@ -151,8 +165,8 @@
     document.querySelector(".l-sidebar").classList.add("is-hidden");
   });
   document.querySelector(".js-menu-pin").addEventListener("click", function() {
-    document.querySelector(".l-sidebar").classList.toggle("is-pinned");
-    if (document.querySelector(".l-sidebar").classList.contains("is-pinned")) {
+    document.querySelector(".l-app").classList.toggle("is-pinned");
+    if (document.querySelector(".l-app").classList.contains("is-pinned")) {
       document.querySelector(".js-menu-pin").innerText = "Unpin"
     } else {
       document.querySelector(".js-menu-pin").innerText = "Pin"
